crates/parser/src/snapshots/parser__tests__parse_inline_ok@0031_simple_ident_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "foopat\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0031_simple_ident_pat.ath
---
IDENT_PAT
  IDENTIFIER
    IDENT "foopat"
  WHITESPACE "\n"

