crates/parser/src/snapshots/parser__tests__parse_inline_ok@0033_simple_while_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "while true (print \"hello world\")\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0033_simple_while_expr.ath
---
WHILE_EXPR
  WHILE_KW "while"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "true"
        WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    IDENT_EXPR
      IDENTIFIER
        IDENT "print"
        WHITESPACE " "
    EXPR_PHRASE
      LITERAL_EXPR
        LITERAL
          STRING "\"hello world\""
    R_PAREN ")"
    WHITESPACE "\n"

