crates/parser/src/snapshots/parser__tests__parse_inline_ok@0037_simple_let_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "let { foo := (hotline miami) } foo\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0037_simple_let_expr.ath
---
LET_EXPR
  LET_KW "let"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_PART
    IDENT_PAT
      NAME
        IDENT "foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "hotline"
        WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            NAME_REF
              IDENT "miami"
        R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE "\n"

