crates/parser/src/snapshots/parser__tests__parse_inline_ok@0040_simple_match_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "match foo { bar => (baz boo) }\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0040_simple_match_expr.ath
---
INFIX_MATCH_EXPR
  MATCH_KW "match"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  MATCH_ARM
    IDENT_PAT
      MAYBE_WILDCARD_TYPED_PARAM
        IDENTIFIER
          IDENT "bar"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    APPLICATION_EXPR
      L_PAREN "("
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "baz"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "boo"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

