crates/parser/src/snapshots/parser__tests__parse_inline_ok@0041_simple_literal_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "\"hello world\"\n"
input_file: crates/parser/test_data/parser/inline/ok/pat/0041_simple_literal_pat.ath
---
LITERAL_PAT
  LITERAL
    STRING "\"hello world\""
  WHITESPACE "\n"

